<resources>
    <string name="app_name">4digits</string>
    <string name="input_message">Please Input your number</string>
    <string name="edt_input_hint">1234</string>
    <string name="btn_ok">OK</string>
    <string name="title_bingo">Bingo</string>
    <string name="title_try_again">Try Again</string>
    <string name="btn_replay">Replay</string>
    <string name="title_activity_material_main">4 Digits</string>
    <string name="title_replay">Are you sure ?</string>
    <string name="msg_replay">Replay ?</string>
    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">NO</string>
    <string name="toast_msg_replay">Data Reset Finished.</string>
    <string name="lbl_count">Count</string>
    <string name="lbl_guess">Guess</string>
    <string name="lbl_result">Result</string>
    <string name="lbl_rank">Rank</string>
    <string name="lbl_datetime">Datetime</string>
    <string name="title_excellent">Excellent!</string>
    <string name="msg_excellent">The number is </string>
    <string name="toolbar_title">Record</string>
    <string name="toolbar_btn_back">Back</string>
    <string name="record_dialog_title">Your Record</string>
    <string name="record_dialog_times">Times</string>
    <string name="fab_delete">Delete</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_msg_delete">Will be delete all record</string>
    <string name="btn_quit">Quit Game</string>
    <string name="btn_play">Play Game</string>
    <string name="btn_record">Game Record</string>
</resources>